--- a/gamestyles.css
+++ b/gamestyles.css
@@ -1,51 +1,248 @@
-#cross{
-	text-align: center;
-	width:30px;
-	height:30px;
-	margin: 0;
-	padding: 0;
-	border-collapse: collapse;
-	border: 1px solid white;
-}
-#buttons{
-	width:30%;
-	float: right;
-}
-tr{
-	margin: 0;
-	padding: 0;
-	border-collapse: collapse;
-}
-td{
-	height: 30px;
-	width: 30px;
-}
-#leftBox{
-	float: left;
-}
-#rightBox{
-	float: left;
-	clear:left;
-}
-.butt{
-	height: 50px;
-	width: 107px;
-}
+*{
+	margin : 0;
+	padding : 0;
+  }
+
 #puzzel{
 	text-align: center;
-	margin: 0;
-	padding: 0;
+	position: absolute;
+	top: 250px;
+	left: 100px;
+	width : auto;
 	border-collapse: collapse;
 	border: 1px solid black;
+	
 }
 .inputBox{
-		width: 80px;
-		height:80px;
-		border: 1px solid ;
-		text-align: center;
+	width: 60px;
+	height:60px;
+	border: 1px solid ;
+	text-align: center;
+	transition: all 0.5s;
+}
+
+.inputBox:hover{
+	background-color: #FFCA55;
 }
 #hintsTable{
 	width: 480px;
-	float: left;
-	clear: left;
+	position: absolute;
+	left: 440px;
+	top: 250px;
+	font-size: 13px;
+	font-family : Source Sans Pro;
+	font-weight : bold;
+	color : #000000;
+	
 }
+#hintsTable td{
+	border: none;
+	padding: 5px;
+	transition: all .3s ease-in-out;
+}
+#hintsTable td:hover{
+	background: #b3f1ff;
+	padding: 5px;
+}
+
+strong{
+	font-size: 15px;
+}
+
+
+
+
+/* style.css */
+
+
+
+
+nav{
+	display: flex;
+	padding: 2% 6%;
+	justify-content: space-between;
+	align-items: center;
+  }
+  nav img {
+	width: 50px;
+  }
+  
+  .nav-links {
+	flex: 1;
+	text-align: right;
+  }
+  
+  .nav-links ul li{
+	list-style-type: none;
+	display: inline-block;
+	background: transparent;
+	padding: 8px 12px;
+	position: relative;
+	transition: all 0.3s ease-in-out;
+  }
+  .nav-links ul li:hover{
+	background: #ff8686;
+  }
+  
+  .nav-links ul li a{
+	text-decoration: none;
+	font-size: 13px;
+	font-family : linotype-didot, serif;
+	font-weight : bold;
+	color : #000000;
+  }
+  
+  .nav-links ul li::after{
+	content: '';
+	width: 0%;
+	height: 2px;
+	background : #ffa7a7;
+	display: block;
+	margin: auto;
+	transition: 0.5s; 
+  }
+  .nav-links ul li:hover::after{
+	width: 100%;
+  } 
+  
+  .text-box{
+	width: 80%;
+	color : #000000;
+	position: absolute;
+	top: 20%;
+	left: 20%;
+	transform: translate(-50%,-50%);
+	text-align: center;
+  }
+  
+  .text-box h1{
+	font-size: 40px;
+	font-family: linotype-didot, serif;
+	font-weight: 700;
+	font-style: normal;
+	color : #000000;
+  }
+  
+  .text-box ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	display: inline-block;
+  }
+  .text-box ul li{
+	font-size: 15px;
+	font-family: linotype-didot, serif;
+	text-align: center;
+	font-weight: 700;
+	font-style: normal;
+	color : #000000;
+  }
+  
+  
+  nav .fa{
+	display: none;
+  
+  }
+  
+  .toolbar{
+	position: absolute;
+	flex: 1;
+	text-align: center;
+	top: 190px;
+	left: 99px;
+  
+  }
+  .toolbar table tr{
+	list-style-type: none;
+	display: flex;
+	align-items: center;
+	padding: 0px;
+	
+	
+  }
+  .toolbar table tr td input{
+	text-decoration: none;
+	font-size: 13px;
+	font-family : Source Sans Pro;
+	font-weight : bold;
+	color : #000000;
+	transition: all 0.3s ease-in-out;
+  }
+  .toolbar table tr td input:hover{
+	background: #ffffff;
+	
+  }
+  
+  .check-button{
+	background : #FFB3B3;
+	padding: 12px 30px;
+	border: none;
+  }
+  
+  .solve-button{ 
+	background : #F49F9F;
+	padding: 12px 30px;
+	border: none; 
+  }
+   .clue-button{
+	background : #F49292;
+	padding: 12px 30px; 
+	border: none;
+  }
+  
+  .clear-button{
+	background : #FF5C5C;
+	padding: 12px 30px;
+	border: none;
+  }
+
+ .pencil-button{
+	background : #EA8193;
+	padding: 12px 30px; 
+	border: none;
+  }
+
+  .timer{
+	margin-top: 1px;
+	text-decoration: none;
+	font-size: 13px;
+	font-family : Source Sans Pro;
+	font-weight : bold;
+	color : #000000;
+	background : #FFCA55;
+	padding: 12px 143px;
+	
+  
+  }
+  
+  @media(max-width: 700px) {
+	.text-box h1{
+		font-size: 30px;
+	}
+	.nav-links ul li{
+		display: block;
+	}
+	.nav-links{
+		position: absolute;
+		background:#ff8686;
+		height: 100vh;
+		width: 200px;
+		top: 0;
+		right: -200px;
+		text-align: left;
+		z-index: 2;
+		transition: .5s;
+  
+	}
+	nav .fa {
+		display: block;
+		color: rgb(0, 0, 0);
+		margin: 10px;
+		font-size: 22px;
+		cursor: pointer;
+		
+	}
+	.nav-links ul{
+	   padding: 30px;
+	}
+  }
