--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ nav img {
   left: 25%;
   transform: translate(-50%,-50%);
   text-align: center;
+  transition: all 0.3s ease-in-out
 }
 
 .text-box h1{
@@ -165,6 +166,7 @@ nav .fa{
 @media(max-width: 700px) {
   .text-box h1{
       font-size: 30px;
+      
   }
   .nav-links ul li{
       display: block;
