--- a/gamestyles.css
+++ b/gamestyles.css
@@ -218,7 +218,7 @@ nav{
 	font-family : Source Sans Pro;
 	font-weight : bold;
 	color : #000000;
-	background : #9be9be;
+	background : #FFCA55;
 	padding: 12px 143px;
 	
   
