--- a/gamestyles.css
+++ b/gamestyles.css
@@ -20,6 +20,7 @@
 	text-align: center;
 	transition: all 0.5s;
 	outline: none;
+	background: none;
 }
 
 input[type="text"]
@@ -31,7 +32,7 @@ input[type="text"]
 
 }
 .inputBox:hover{
-	background-color: #FFCA55;
+	background: #FFCA55;
 }
 #hintsTable{
 	width: 480px;
@@ -148,17 +149,84 @@ nav{
   }
   
   
+  
   nav .fa{
 	display: none;
   
   }
+  .number{
+	position: absolute;
+	top: 237px;
+	left: 76px;
+	font-family: source-sans-pro, sans-serif;
+	font-weight: 600;
+	font-size: 15px;
+	color : #000000;
+	background: none;
+	user-select: none;
+
+
+  }
+  .number tr{
+	border: none;
+	padding: 0px, 0px;
+  }
+
+  .number tr td{
+	padding: 26px;
+	padding-top: 15px;
+	background: none;
+	
+
+  }
+  
+
+  #stopwatch{
+	position: absolute;
+	top: 191px;
+	left: 100px;
+	margin-top: 1px;
+	text-decoration: none;
+	font-size: 15px;
+	font-family : Source Sans Pro;
+	font-weight : bold;
+	color : #000000;
+	background : #FFCA55;
+	padding: 11px 128px;
+	display: inline;
+
+  }
+  #timer-buttons{
+	list-style-type: none;
+	position: absolute;
+	top: 204px;
+	left: 300px;
+	text-decoration: none;
+	font-size: 15px;
+	font-family : Source Sans Pro;
+	font-weight : bold;
+	color : #000000;
+	display: inline;
+
+}
+  #timer-buttons li{
+	text-align: center;
+	display: inline;
+  }
+  #timer-buttons li button{
+	display: inline;
+	border: none;
+	padding: 11px 128px;
+	background: none;
+  }
+
   
   .toolbar{
 	position: absolute;
 	flex: 1;
 	text-align: center;
 	top: 190px;
-	left: 99px;
+	left: 410px;
   
   }
   .toolbar table tr{
@@ -211,19 +279,30 @@ nav{
 	border: none;
   }
 
-  .timer{
-	margin-top: 1px;
-	text-decoration: none;
-	font-size: 13px;
-	font-family : Source Sans Pro;
-	font-weight : bold;
-	color : #000000;
-	background : #FFCA55;
-	padding: 12px 143px;
-	
+
   
+  #play-button{
+	  position: absolute;
+	  padding: none;
+	  display: inline;
+	  right: -30 px;
   }
-  
+
+  #stop-button{
+	  position: absolute;
+	  padding: none;
+	  display: inline;
+	  right: 3000px;
+	  
+	  
+  }
+
+  #reset-button{
+
+	  padding-left: 50px;
+	  
+  }
+
   @media(max-width: 700px) {
 	.text-box h1{
 		font-size: 30px;
