--- a/gamestyles.css
+++ b/gamestyles.css
@@ -6,7 +6,7 @@
 #puzzel{
 	text-align: center;
 	position: absolute;
-	top: 250px;
+	top: 290px;
 	left: 100px;
 	width : auto;
 	border-collapse: collapse;
@@ -279,7 +279,21 @@ nav{
 	border: none;
   }
 
-
+  #clue-box{
+	position: absolute;
+	top: 250px;
+	left: 110px;
+	text-align: center;
+	padding-left: 15px;
+	padding-right: 15px;
+  }
+  #clue-text{
+	text-align: center;
+	font-size: 20px;
+	font-family : Source Sans Pro;
+	font-weight : bold;
+	color : #000000;
+  }
   
   #play-button{
 	  position: absolute;
