--- a/gamestyles.css
+++ b/gamestyles.css
@@ -60,6 +60,19 @@ strong{
 }
 
 
+#completion-text{
+	
+	position: absolute;
+	top: 450px;
+	left: -450px;
+	font-size: 20px;
+	font-family : Source Sans Pro;
+	font-weight : bold;
+	background: #ffa7a7;
+	padding: 25px;
+	color : #000000;
+}
+
 
 
 /* style.css */
@@ -282,7 +295,7 @@ nav{
   #clue-box{
 	position: absolute;
 	top: 250px;
-	left: 110px;
+	left: 90px;
 	text-align: center;
 	padding-left: 15px;
 	padding-right: 15px;
