--- a/gamestyles.css
+++ b/gamestyles.css
@@ -6,10 +6,11 @@
 #puzzel{
 	text-align: center;
 	position: absolute;
-	top: 290px;
-	left: 100px;
+	top: 40%;
+	left: 10%;
 	border-collapse: collapse;
 	border: 1px solid black;
+	transition: all 0.5s ease;
 	
 }
 .inputBox{
@@ -56,12 +57,14 @@ input[type="text"]
 #hintsTable{
 	width: 480px;
 	position: absolute;
-	left: 440px;
-	top: 250px;
+	margin-left: 350px;
+	left: 10%;
+	top: 40%;
 	font-size: 13px;
 	font-family : Source Sans Pro;
 	font-weight : bold;
 	color : #000000;
+	transition: all 0.5s ease;
 	
 }
 #hintsTable td{
@@ -82,7 +85,7 @@ strong{
 #completion-text{
 	
 	position: absolute;
-	top: 450px;
+	top: 550px;
 	left: -450px;
 	font-size: 20px;
 	font-family : Source Sans Pro;
@@ -156,7 +159,7 @@ nav{
 	left: 20%;
 	transform: translate(-50%,-50%);
 	text-align: center;
-	transition: all 1s ease-in-out;
+	transition: all 0.3s ease-in-out;
   }
 
   
@@ -289,29 +292,37 @@ nav{
 	background : #FFB3B3;
 	padding: 12px 30px;
 	border: none;
+	transition: all 0.5s ease-in-out;
   }
+
   
   .solve-button{ 
 	background : #F49F9F;
 	padding: 12px 30px;
-	border: none; 
+	border: none;
+	transition: all 0.5s ease-in-out; 
+
+
   }
    .clue-button{
 	background : #F49292;
 	padding: 12px 30px; 
 	border: none;
+	transition: all 0.5s ease-in-out;
   }
   
   .clear-button{
 	background : #FF5C5C;
 	padding: 12px 30px;
 	border: none;
+	transition: all 0.5s ease-in-out;
   }
 
  .pencil-button{
 	background : #EA8193;
 	padding: 12px 30px; 
 	border: none;
+	transition: all 0.5s ease-in-out;
   }
 
   #clue-box{
@@ -356,6 +367,15 @@ nav{
 	body {
 		overflow-x: hidden; /* Hide scrollbars */
 	  }  
+	#puzzel{
+		text-align: center;
+		position: absolute;
+		top: 40%;
+		left: 20%;
+		border-collapse: collapse;
+		border: 1px solid black;
+		
+	}
 
 
 	.text-box{
@@ -398,7 +418,7 @@ nav{
 		flex: 1;
 		text-align: center;
 		top: 620px;
-		left: 100px;
+		left: 102px;
 	}
 	.check-button{
 		background : #FFB3B3;
@@ -429,11 +449,12 @@ nav{
 		border: none;
 	  }
 	#hintsTable{
-		display:flex;
+		display: flex;
 		position: absolute;
-		left: 100px;
+		left: -250px;
 		top: 670px;
 		font-size: 13px;
+		width: 350px;
 		font-family : Source Sans Pro;
 		font-weight : bold;
 		color : #000000;
@@ -445,8 +466,20 @@ nav{
 
 	#hintsTable td{
 		flex-basis: 33.33%;
-		border: 2px solid white;
+		border: none;
 		/* transition: all .3s ease-in-out; */
+	}
+	#completion-text{
+	
+		position: absolute;
+		top: 550px;
+		left: -450px;
+		font-size: 20px;
+		font-family : Source Sans Pro;
+		font-weight : bold;
+		background: #ffa7a7;
+		padding: 25px;
+		color : #000000;
 	}
 	
 
