--- a/gamestyles.css
+++ b/gamestyles.css
@@ -9,14 +9,14 @@
 	top: 40%;
 	left: 10%;
 	border-collapse: collapse;
-	border: 1px solid black;
+	border: 0.5px solid black;
 	transition: all 0.5s ease;
 	
 }
 .inputBox{
 	width: 60px;
 	height: 60px;
-	border: 1px solid ;
+	border: 0.5px solid ;
 	text-align: center;
 	outline: none;
 	background: none;
@@ -24,7 +24,7 @@
 .numberedBox{
 	width: 60px;
 	height: 60px;
-	border: 1px solid ;
+	border: 0.5px solid black;
 	text-align: center;
 	outline: none;
 	background: none;
@@ -222,7 +222,7 @@ nav{
   #stopwatch{
 	position: absolute;
 	top: 191px;
-	left: 100px;
+	left: 10%;
 	margin-top: 1px;
 	text-decoration: none;
 	font-size: 15px;
@@ -264,7 +264,8 @@ nav{
 	flex: 1;
 	text-align: center;
 	top: 190px;
-	left: 410px;
+	left: 10%;
+	margin-left: 310px;
   
   }
   .toolbar table tr{
@@ -328,7 +329,7 @@ nav{
   #clue-box{
 	position: absolute;
 	top: 250px;
-	left: 90px;
+	left: 10%;
 	text-align: center;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -345,7 +346,7 @@ nav{
 	  position: absolute;
 	  padding: 2px;
 	  display: inline;
-	  right: 300px;
+	  right: 20%;
   }
 
   #stop-button{
@@ -370,8 +371,8 @@ nav{
 	#puzzel{
 		text-align: center;
 		position: absolute;
-		top: 40%;
-		left: 20%;
+		top: 290px;
+		left: 100px;
 		border-collapse: collapse;
 		border: 1px solid black;
 		
@@ -412,6 +413,11 @@ nav{
 	.nav-links ul{
 	   padding: 30px;
 	}
+	#stopwatch{
+		position: absolute;
+		top: 190px;
+		left: 100px;
+	}
 
 	.toolbar{
 		position: absolute;
@@ -419,6 +425,7 @@ nav{
 		text-align: center;
 		top: 620px;
 		left: 102px;
+		margin-left: 0px;
 	}
 	.check-button{
 		background : #FFB3B3;
