--- a/gamestyles.css
+++ b/gamestyles.css
@@ -238,7 +238,8 @@ nav{
 	list-style-type: none;
 	position: absolute;
 	top: 204px;
-	left: 300px;
+	left: 10%;
+	margin-left: 100px;
 	text-decoration: none;
 	font-size: 15px;
 	font-family : Source Sans Pro;
@@ -353,14 +354,14 @@ nav{
 	  position: absolute;
 	  padding: 2px;
 	  display: inline;
-	  right: 0px;
+	  margin-left: 100px;
 	  
 	  
   }
 
   #reset-button{
 
-	  padding-left: 5px;
+	  padding-left: 100px;
 	  
   }
 
