--- a/gamestyles.css
+++ b/gamestyles.css
@@ -3,6 +3,10 @@
 	padding : 0;
   }
 
+body {
+	overflow-x: hidden; /* Hide scrollbars */
+}  
+
 #puzzel{
 	text-align: center;
 	position: absolute;
@@ -374,6 +378,35 @@ nav{
 	  padding-left: 100px;
 	  
   }
+
+
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+    width: 12px;
+}
+
+::-webkit-scrollbar:horizontal {
+   display: none;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, .5);
+    border-radius: 10px;
+    border: 2px solid #ffffff;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #ffffff;
+}
+
+
+
+
+
 
   @media(max-width: 700px) {
 	body {
