--- a/gamestyles.css
+++ b/gamestyles.css
@@ -308,6 +308,7 @@ nav{
 	padding: 12px 30px;
 	border: none;
 	transition: all 0.5s ease-in-out;
+	border-radius: 0;
   }
 
   
@@ -316,6 +317,7 @@ nav{
 	padding: 12px 30px;
 	border: none;
 	transition: all 0.5s ease-in-out; 
+	border-radius: 0;
 
 
   }
@@ -324,6 +326,7 @@ nav{
 	padding: 12px 30px; 
 	border: none;
 	transition: all 0.5s ease-in-out;
+	border-radius: 0;
   }
   
   .clear-button{
@@ -331,6 +334,7 @@ nav{
 	padding: 12px 30px;
 	border: none;
 	transition: all 0.5s ease-in-out;
+	border-radius: 0;
   }
 
  .pencil-button{
@@ -338,6 +342,7 @@ nav{
 	padding: 12px 30px; 
 	border: none;
 	transition: all 0.5s ease-in-out;
+	border-radius: 0;
   }
 
   #clue-box{
