trying to get rid of the scroll bar as well

--- a/gamestyles.css
+++ b/gamestyles.css
@@ -429,6 +429,7 @@ nav{
 
   @media(max-width: 700px) {
 	body {
+		-webkit-appearance: none;
 		overflow-x: hidden; /* Hide scrollbars */
 	  }  
 	#puzzel{
