--- a/gamestyles.css
+++ b/gamestyles.css
@@ -166,7 +166,7 @@ nav{
 	width: 80%;
 	color : #000000;
 	position: absolute;
-	top: 20%;
+	top: 140px;
 	left: 20%;
 	transform: translate(-50%,-50%);
 	text-align: center;
@@ -450,6 +450,7 @@ nav{
 
 
 	.text-box{
+		top: 140px;
 		font-size: 30px;
 		position: absolute;
 		left: 250px;
